# na-tech-jobs

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATA_DICTIONARY.md  LITERATURE_REVIEW.md  MAINTENANCE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  deploy-space.yml  drift.yml  ingest.yml  retrain.yml
app/: __init__.py  feature_form.py  main.py  model_loader.py  retriever_loader.py
app/tabs/: __init__.py  analytics.py  dashboard.py  matcher.py  salary.py  search.py
curated/: __init__.py  build.py  duckdb_views.sql  enrich.py
eda/: __init__.py  audit.py  report.py  split.py
eval/: metrics.py  retrieval_queries.jsonl  reviewed_summary.json  role_family_test.jsonl  run_retrieval_eval.py  seniority_test.jsonl
eval/preliminary/: role_family_vs_llm.json  role_family_vs_reviewed.json  seniority_vs_llm.json  seniority_vs_reviewed.json
eval/retrieval_results/: dense.csv  hybrid_rerank.csv  summary.json  summary.md
infra/: persistent_storage.md  secrets.md
ingestion/: __init__.py  companies.yaml  dedup.py  normalize.py  orchestrator.py  push_to_hub.py  quality.py  schema.py
ingestion/extractors/: __init__.py  (+4 more)
models/: __init__.py  _classifier_base.py  _classifier_inference.py
monitoring/: __init__.py  alerts.py  champion_challenger.py  drift.py  market_trends.py  pipeline_health.py
rag/: __init__.py  chunking.py  embedder.py  nl2sql.py  pipeline.py  qdrant_client.py  reranker.py
scripts/: aggregate_reviewed.py  backfill_features.py  build_eval_proposals.py  build_retrieval_queries.py  build_review_packets.py  eval_classifiers_against_proposals.py  index_jobs.py  label_classifier.py  probe_handles.py  publish_classifier.py  publish_dataset_docs.py  publish_qdrant_index.py  publish_salary_model.py
tests/: test_smoke.py
(+60 files in other folders)
