[project]
name = "na-tech-jobs"
version = "0.0.1"
description = "Production ML platform for the North American senior tech-hiring market."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Arjun Ghumman", email = "arjunghumman1995@gmail.com" }]
keywords = ["jobs", "ml", "rag", "huggingface", "data-science"]

dependencies = [
    "duckdb>=1.0",
    "pyarrow>=15",
    "pandas>=2.2",
    "pandera>=0.20",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "httpx>=0.27",
    "tenacity>=8.3",
    "markdownify>=0.13",
    "gradio==5.49.1",
    "huggingface-hub>=0.24",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "optuna>=3.6",
    "mlflow>=2.14",
    "torch>=2.3",
    "transformers>=4.43",
    "peft>=0.12",
    "accelerate>=0.33",
    "sentence-transformers>=3.0",
    "FlagEmbedding>=1.2.10",
]
rag = [
    "qdrant-client[fastembed]>=1.10",
    "langchain-text-splitters>=0.2",
    "sqlglot>=25.0",
    "pypdf>=4.3",
]
monitoring = [
    "evidently>=0.4.30",
]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks", "data", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
